# Agentic-RAG

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  interface.py
app/modules/processing/: __init__.py  audio_processor.py  generic_processor.py  image_processor.py  pdf_processor.py  web_processor.py
app/modules/qa_pipeline/: generation.py  retrieval.py
app/modules/vector_store/: operations.py  setup.py
app/modules/web_integration/: api_service.py  crawler.py
backup/: app.py  app_old.py
server/: ollama-hosting.ipynb
test_files/: Paper Results.docx
tests/: test_search.py  test_upload.py
